# saffron

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  project_specs.docx  pyproject.toml
.github/workflows/: python-package-conda.yml
notebooks/: mean_mito_distance.ipynb  mito_threshold.ipynb  nd2_demo.ipynb  saffron_ml_demo.ipynb
scripts/: basic_saffron_demo.py  config_demo.py  contrastive_demo.py  error.err  error_1.err  matt_processing.py  microglia_mitochondria_SM_analysis.py  output.out  output_1.out  saffron_CNN_train.slurm  slurm-31748537.err  slurm-31748556.err  slurm-31748556.out  test_model_local.py  tiff_quadrant_split.py  train_test_split.py
src/codebase/: codebase.py
src/saffron/: __init__.py  mito_threshold.py
src/saffron/config/: __init__.py  paths.py
src/saffron/data/: __init__.py  data_processing.py  datasets.py  preprocessing.py  validation.py
src/saffron/io/: __init__.py  data_io.py  data_processing.py  file_io.py
src/saffron/models/: loss_functions.py  torch_models.py
tests/: test_codebase.py  test_data_io.py  test_data_processing.py  test_datasets.py  test_file_io.py
